--- a/main.css
+++ b/main.css
@@ -106,3 +106,12 @@ h1{
   justify-content: center;
   align-items:center;
 }
+
+.todobtn {
+  color: rgb(0, 26, 255);
+  font-size: 20px;
+  font-weight: 900;
+  border-radius: 5px;
+  border-color: transparent;
+  background-color:#73f707;
+}
